--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
+    // https://mvnrepository.com/artifact/io.reactivex/rxjava
+    implementation 'io.reactivex:rxjava:1.3.8'
+
 }
